<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MechanicDashboard">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mechanic_dashboard"
                android:textAlignment="center"
                android:background="#004c69"
                android:textColor="@color/white"
                android:id="@+id/mheading"
                android:textAppearance="?attr/textAppearanceHeadline4"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:id="@+id/bussnLayout"
                android:layout_below="@id/mheading"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/driver"
                    android:id="@+id/bussnLogo"
                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_business"
                    android:textSize="18sp"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:id="@+id/updatebussn"
                android:layout_below="@id/bussnLayout"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/driver"
                    android:id="@+id/updBussn"
                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_business"
                    android:textSize="18sp"
                    />


            </LinearLayout>
        </RelativeLayout>




    </com.google.android.material.card.MaterialCardView>




</RelativeLayout>